# corewar

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  Makefile  asm.h  author  fast_strsplit.c  file_to_list.c  file_to_list.h  ft_wordequ.c  get_header.c  main.c  op.h  options.h  test.cor  test.s  tokenizator.c
SDL2_ttf.framework/Frameworks/FreeType.framework/Headers/freetype/: freetype.h  ftadvanc.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftcid.h  ftdriver.h  ftfntfmt.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmac.h  ftmm.h  ftmodapi.h  ftotval.h  ftoutln.h  ftparams.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsynth.h  ftsystem.h  fttypes.h  ftwinfnt.h  t1tables.h  ttnameid.h  tttables.h  tttags.h
SDL2_ttf.framework/Frameworks/FreeType.framework/Headers/freetype/config/: ftconfig.h
SDL2_ttf.framework/Frameworks/FreeType.framework/Versions/A/Headers/freetype/: freetype.h  ftbdf.h  ftcid.h  ftdriver.h  ftgasp.h  ftincrem.h  ftlist.h  ftparams.h  ftpfr.h  ftrender.h  ftsizes.h  ftstroke.h  ftsynth.h  ftwinfnt.h
SDL2_ttf.framework/Frameworks/FreeType.framework/Versions/A/Headers/freetype/config/: ftconfig.h  ftoption.h
SDL2_ttf.framework/Frameworks/FreeType.framework/Versions/Current/Headers/: ft2build.h
SDL2_ttf.framework/Frameworks/FreeType.framework/Versions/Current/Headers/freetype/: ftadvanc.h  ftbbox.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftfntfmt.h  ftglyph.h  ftgxval.h  ftgzip.h  ftimage.h  ftlcdfil.h  ftlzw.h  ftmm.h  ftmodapi.h  ftotval.h  ftoutln.h  ftsnames.h  fttypes.h  t1tables.h  tttables.h  tttags.h
SDL2_ttf.framework/Versions/A/Frameworks/FreeType.framework/Headers/freetype/: freetype.h  ftadvanc.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftcid.h  ftdriver.h  ftfntfmt.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftimage.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmac.h  ftmm.h  ftmodapi.h  ftotval.h  ftoutln.h  ftparams.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsynth.h  ftsystem.h  fttypes.h  ftwinfnt.h  t1tables.h  tttables.h  tttags.h
SDL2_ttf.framework/Versions/A/Frameworks/FreeType.framework/Headers/freetype/config/: ftconfig.h
SDL2_ttf.framework/Versions/A/Frameworks/FreeType.framework/Versions/A/Headers/freetype/: freetype.h  ftadvanc.h  ftbzip2.h  ftcache.h  ftdriver.h  ftgasp.h  ftgxval.h  ftgzip.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmodapi.h  ftoutln.h  ftpfr.h  ftrender.h  ftstroke.h  fttypes.h  t1tables.h  tttags.h
SDL2_ttf.framework/Versions/A/Frameworks/FreeType.framework/Versions/Current/Headers/: ft2build.h
SDL2_ttf.framework/Versions/A/Frameworks/FreeType.framework/Versions/Current/Headers/freetype/: ftbbox.h  ftbdf.h  ftbitmap.h  ftcid.h  ftfntfmt.h  ftglyph.h  ftmm.h  ftotval.h  ftparams.h  ftsizes.h  ftsnames.h  ftsynth.h  ftwinfnt.h  ttnameid.h  tttables.h
SDL2_ttf.framework/Versions/Current/Frameworks/FreeType.framework/Headers/: ft2build.h
SDL2_ttf.framework/Versions/Current/Frameworks/FreeType.framework/Headers/freetype/: freetype.h  ftadvanc.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftcid.h  ftdriver.h  ftfntfmt.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmac.h  ftmm.h  ftmodapi.h  ftotval.h  ftoutln.h  ftparams.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsynth.h  fttypes.h  ftwinfnt.h  t1tables.h  tttables.h  tttags.h
SDL2_ttf.framework/Versions/Current/Frameworks/FreeType.framework/Headers/freetype/config/: ftconfig.h
asm/: arguments.c  asm.c  asm.h  asm_d.c  asm_dasha.h  command_check.c  command_length.c  command_weight.c  commands_coding.c  commands_lst.c  errors.h  ft_isdigitalword.c  ft_isspecial.c  ft_skipword.c  get_header.c  if_checks.c  init_headers.c  label_substitution.c  libword.h  main_args_read.c  print.c  print_comands.c  print_header.c  rewind.c  tkn_str_cat.c  token_exception.c  token_exit.c  token_fill.c  token_recognition.c  token_sequence_check.c  tokenizer.c  tokens_lst.c
assembler/: Makefile  command_check.c  command_length.c  errors.h  ft_isspecial.c  ft_wordequ.c  if_checks.c  init_headers.c  label_substitution.c  print_header.c  rewind.c  tkn_str_cat.c  token_exception.c  token_fill.c  token_sequence_check.c  tokens_lst.c
champ/: meh.s
cw_ex/: Gagnant1.cor  Gagnant2.cor  YaLentay.cor
cw_ex/champs/: Gagnant.cor  Gagnant.s  my.cor  my.s
ft_printf/: Makefile
ft_printf/includes/: ft_ptintf.h
ft_printf/srcs/: ft_printf.c  to_buff.c  zeroing.c
libft/: Makefile  ft_lstcirc_add.c  ft_lstcirc_strnew.c  ft_lstnew.c  ft_memalloc.c  ft_strdup.c  ft_strjoin.c  ft_strndup.c  ft_strnew.c  get_next_line.c  get_next_line.h  go_exit.c  libft.h  memlist.h  ml_get_next_line.c  ml_itoa.c  ml_memalloc.c  ml_strdup.c  ml_strjoin.c  ml_strjoinre.c  ml_strmap.c  ml_strmapi.c  ml_strndup.c  ml_strnew.c  ml_strsplit.c  ml_strsub.c  ml_strtrim.c
libft/memlist/: blackbox_memlist.h  memlist_bottleneck.c  ml_create.c  ml_del.c  ml_general.c  ml_givemem.c
vm/: Makefile  corewar
vm/includes/: disasm.h  error_defs.h  vc_list.h  vis.h  vis.h.orig  vis_errors.h  vm.h  vm_structs.h
vm/srcs/: main.c
vm/srcs/game/: add_cell.c  arena_exit.c  args_intf.c  create_vs.c  game.c  game.c.orig  game_intf.c  helper_func.c  init_sdl.c  instr_fork_zjmp_live.c  instr_fork_zjmp_live_aff.c  instr_ld.c  instr_operations.c  instr_st.c  instuctions.c  print_arena.c  print_fork_zjmp_live_aff.c  print_v_4_flg.c  print_v_flg.c  print_v_ld.c  print_v_operations.c  print_v_st.c  support_func.c  visualise_arena.c
vm/srcs/game/vis/: create_vs.c  create_vs.c.orig  disasm.c  disasm_funcs.c  display_carriages.c  display_game_data.c  display_side_menu.c  display_side_menu.c.orig  draw_frame.c  higlight_cells.c  init_sdl.c  init_sdl.c.orig  list_vc.c  print_arena.c  support_func.c  support_func.c.orig  track_events.c  vc_list.c  vc_sort.c  visualise_arena.c  visualise_arena.c.orig
vm/srcs/struct_intf/: carriage_intf.c  corewar_intf.c
vm/srcs/validation/: parse_input_intf.c  parse_inputs.c  reports.c
(+41 files in other folders)
