cmake_minimum_required(VERSION 3.15)
project(CoreWar_Hub C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(asm)
include_directories(libft)
include_directories(libft/memlist)

add_executable(CoreWar_Hub
        asm/arguments.c
        asm/asm.c
        asm/asm.h
        asm/ft_isdigitalword.c
        asm/ft_isspecial.c
        asm/ft_skipword.c
        asm/get_header.c
        asm/libword.h
        asm/token_fill.c
        asm/tokenizer.c
        asm/tokens_lst.c
        libft/memlist/blackbox_memlist.h
        libft/memlist/memlist_bottleneck.c
        libft/memlist/ml_create.c
        libft/memlist/ml_del.c
        libft/memlist/ml_general.c
        libft/ft_abs.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_fib.c
        libft/ft_floor.c
        libft/ft_is_complex_string.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_islower.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_isupper.c
        libft/ml_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstpush.c
        libft/ml_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_pow.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_reverse.c
        libft/ft_sqrt.c
        libft/ft_sstrchr.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ml_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ml_strjoin.c
        libft/ml_strjoinre.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ml_strmap.c
        libft/ml_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ml_strndup.c
        libft/ft_strnequ.c
        libft/ml_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ml_strsplit.c
        libft/ft_strstr.c
        libft/ml_strsub.c
        libft/ml_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/go_exit.c
        libft/get_next_line.h
        libft/ml_get_next_line.c
        libft/libft.h
        libft/memlist.h
        fast_strsplit.c
        file_to_list.c
        file_to_list.h
        ft_wordequ.c
        op.h
        options.h)
